# Satellites

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  constants.h  parallel.c  parallel.cl  satellites_part_two.md  satellites_partone.md
